--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import "tailwindcss";
-
-*{
-  margin:0;
-  padding:0;
+@font-face {
+  font-family: "MyFont";
+  src: url("/main.ttf");
+  font-weight: 600;
+  font-style: normal;
 }
+
 
 html,body,#root{
   height:100%;
